[project]
name = "license_plate-recognition"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "J0n1lu5", email = "j.pluder@mci4me.at"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
